--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -152,7 +152,7 @@ spec:
     - name: MS_GRAPH_SCOPE
       value: "https://graph.microsoft.com/.default"
     - name: APP_ENVIRONMENT_NAME
-      value: "{{ namespace }}"
+      value: "p"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt-q2.prod-fss-pub.nais.io"
     - name: REDIS_PORT
