--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -57,6 +57,9 @@ spec:
         - host: norg2.dev-fss-pub.nais.io
       rules:
         - application: modiacontextholder-redis-med-passord
+        - application: nom-api
+          namespace: nom
+          cluster: dev-gcp
     inbound:
       rules:
         - application: arbeidssokerregistrering-veileder
