--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -55,6 +55,7 @@ spec:
         - host: axsys.prod-fss-pub.nais.io
         - host: pdl-api.prod-fss-pub.nais.io
         - host: norg2.prod-fss-pub.nais.io
+        - host: graph.microsoft.com
       rules:
         - application: modiacontextholder-redis-med-passord
         - application: nom-api
