--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -145,7 +145,7 @@ spec:
     - name: NORG2_SCOPE
       value: "prod-fss:org:norg2"
     - name: NOM_URL
-      value: "https://nom-api.intern.nav.no"
+      value: "http://nom-api.nom"
     - name: NOM_SCOPE
       value: "prod-gcp:nom:nom-api"
     - name: MS_GRAPH_URL
