Øk tier på prod-gcp database
Glemte dette før vi gikk i prod, og vi gikk tom for connections og
CPU ble ganske kokt.

--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -40,6 +40,7 @@ spec:
       - type: POSTGRES_15
         databases:
           - name: modiacontextholder-db
+        tier: db-custom-4-6400
   azure:
     application:
       enabled: true
