--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -156,7 +156,7 @@ spec:
     - name: APP_ENVIRONMENT_NAME
       value: "p"
     - name: AAREG_URL
-      value: "https://arbeid-og-inntekt-q2.prod-fss-pub.nais.io"
+      value: "https://arbeid-og-inntekt.prod-fss-pub.nais.io"
     - name: REDIS_PORT
       value: "6379"
     - name: REDIS_HOST
