--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <serialization.version>1.7.1</serialization.version>
         <coroutines.version>1.3.9</coroutines.version>
         <modia-common-utils.version>1.2024.06.26-10.11-d6295491fb9f</modia-common-utils.version>
+        <caffeine.version>3.1.8</caffeine.version>
     </properties>
 
     <repositories>
@@ -223,8 +224,9 @@
             <artifactId>ojdbc8</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.ehcache</groupId>
-            <artifactId>ehcache</artifactId>
+            <groupId>com.github.ben-manes.caffeine</groupId>
+            <artifactId>caffeine</artifactId>
+            <version>${caffeine.version}</version>
         </dependency>
 
         <!-- redis -->
