--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ management.endpoint.prometheus.enabled=true
 management.endpoints.web.base-path=/internal
 management.endpoints.web.exposure.include=prometheus
 management.prometheus.metrics.export.enabled=true
+
+spring.cache.cache-names=enheterCache,azureAdCache,veilederCache
