Rename autowired cache for enheter
Den conflicter antakeligvis med custom EnheterCache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ management.endpoints.web.base-path=/internal
 management.endpoints.web.exposure.include=prometheus
 management.prometheus.metrics.export.enabled=true
 
-spring.cache.cache-names=enheterCache,azureAdCache,veilederCache
+spring.cache.cache-names=enheter,azureAdCache,veilederCache
