--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -39,6 +39,9 @@ spec:
     min: 2
     max: 4
     cpuThresholdPercentage: 50
+  redis:
+    - instance: contextholder
+      access: readwrite
   azure:
     application:
       enabled: true
@@ -55,7 +58,6 @@ spec:
         - host: pdl-api.dev-fss-pub.nais.io
         - host: norg2.dev-fss-pub.nais.io
       rules:
-        - application: modiacontextholder-redis-med-passord
         - application: nom-api
           namespace: nom
           cluster: dev-gcp
@@ -131,7 +133,6 @@ spec:
     enabled: true
   envFrom:
     - secret: modiacontextholder-unleash-api-token
-    - secret: modiacontextholder-redis-passord
   env:
     - name: AXSYS_URL
       value: "https://axsys.dev-fss-pub.nais.io"
@@ -157,10 +158,12 @@ spec:
       value: "{{ namespace }}"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt-q2.dev-fss-pub.nais.io"
-    - name: REDIS_PORT
-      value: "6379"
-    - name: REDIS_HOST
-      value: "modiacontextholder-redis-med-passord.personoversikt.svc.cluster.local"
+    - name: REDIS_URI
+      value: "${REDIS_URI_CONTEXTHOLDER}"
+    - name: REDIS_USER
+      value: "${REDIS_USERNAME_CONTEXTHOLDER}"
+    - name: REDIS_PASSWORD
+      value: "${REDIS_PASSWORD_CONTEXTHOLDER}"
     - name: SALESFORCE_URL
       value: "https://navdialog--sit2.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
