--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -172,10 +172,8 @@ spec:
       value: "p"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt.nais.adeo.no"
-    - name: REDIS_PORT
-      value: "6379"
-    - name: REDIS_HOST
-      value: "modiacontextholder-redis-med-passord.personoversikt.svc.nais.local"
+    - name: REDIS_URI
+      value: "redis://modiacontextholder-redis-med-passord.personoversikt.svc.nais.local:6379"
     - name: SALESFORCE_URL
       value: "https://navdialog.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
