--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -155,10 +155,8 @@ spec:
       value: "p"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt.prod-fss-pub.nais.io"
-    - name: REDIS_PORT
-      value: "6379"
-    - name: REDIS_HOST
-      value: "modiacontextholder-redis-med-passord.personoversikt.svc.cluster.local"
+    - name: REDIS_URI
+      value: "redis://modiacontextholder-redis-med-passord:6379"
     - name: SALESFORCE_URL
       value: "https://navdialog.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
