--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -162,10 +162,8 @@ spec:
       value: "{{ namespace }}"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt-q1.dev.adeo.no"
-    - name: REDIS_PORT
-      value: "6379"
-    - name: REDIS_HOST
-      value: "modiacontextholder-redis-med-passord.personoversikt.svc.nais.local"
+    - name: REDIS_URI
+      value: "redis://modiacontextholder-redis-med-passord.personoversikt.svc.nais.local:6379"
     - name: SALESFORCE_URL
       value: "https://navdialog--sit2.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
