Set default cache expiry explicitly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ management.endpoints.web.exposure.include=prometheus
 management.prometheus.metrics.export.enabled=true
 
 spring.cache.cache-names=enheter,azureAdCache,veilederCache
+spring.cache.caffeine.spec=expireAfterAccess=3600s
