--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -159,11 +159,11 @@ spec:
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt-q2.dev-fss-pub.nais.io"
     - name: REDIS_URI
-      value: "${REDIS_URI_CONTEXTHOLDER}"
+      value: "$(REDIS_URI_CONTEXTHOLDER)"
     - name: REDIS_USER
-      value: "${REDIS_USERNAME_CONTEXTHOLDER}"
+      value: "$(REDIS_USERNAME_CONTEXTHOLDER)"
     - name: REDIS_PASSWORD
-      value: "${REDIS_PASSWORD_CONTEXTHOLDER}"
+      value: "$(REDIS_PASSWORD_CONTEXTHOLDER)"
     - name: SALESFORCE_URL
       value: "https://navdialog--sit2.lightning.force.com"
     - name: UNLEASH_ENVIRONMENT
