--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -158,6 +158,8 @@ spec:
       value: "{{ namespace }}"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt-q2.dev-fss-pub.nais.io"
+    - name: AAREG_PUBLIC_URL
+      value: "https://arbeid-og-inntekt-q2.dev.adeo.no"
     - name: REDIS_URI
       value: "$(REDIS_URI_CONTEXTHOLDER)"
     - name: REDIS_USER
