--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -155,6 +155,8 @@ spec:
       value: "p"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt.prod-fss-pub.nais.io"
+    - name: AAREG_PUBLIC_URL
+      value: "https://arbeid-og-inntekt.nais.adeo.no"
     - name: REDIS_URI
       value: "redis://modiacontextholder-redis-med-passord:6379"
     - name: SALESFORCE_URL
