--- a/.nais/nais.yaml
+++ b/.nais/nais.yaml
@@ -172,6 +172,8 @@ spec:
       value: "p"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt.nais.adeo.no"
+    - name: AAREG_PUBLIC_URL
+      value: "https://arbeid-og-inntekt.nais.adeo.no"
     - name: REDIS_URI
       value: "redis://modiacontextholder-redis-med-passord.personoversikt.svc.nais.local:6379"
     - name: SALESFORCE_URL
