--- a/.nais/qa-template.yaml
+++ b/.nais/qa-template.yaml
@@ -162,6 +162,8 @@ spec:
       value: "{{ namespace }}"
     - name: AAREG_URL
       value: "https://arbeid-og-inntekt-q1.dev.adeo.no"
+    - name: AAREG_PUBLIC_URL
+      value: "https://arbeid-og-inntekt-q1.dev.adeo.no"
     - name: REDIS_URI
       value: "redis://modiacontextholder-redis-med-passord.personoversikt.svc.nais.local:6379"
     - name: SALESFORCE_URL
