feat. La til tiltaksgjennomforing-intern i inbound accessPolicy

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -129,6 +129,9 @@ spec:
         - application: modiacontextholder-q2
           namespace: personoversikt
           cluster: dev-fss
+        - application: tiltaksgjennomforing-intern
+          namespace: arbeidsgiver
+          cluster: dev-gcp
   secureLogs:
     enabled: true
   envFrom:
