--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -104,6 +104,8 @@ spec:
         - application: rekrutteringsbistand
           namespace: toi
           cluster: prod-gcp
+        - application: rekrutteringsbistand-next
+          namespace: toi
         - application: spinnsyn-frontend-interne
           namespace: flex
           cluster: prod-gcp
