--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
             <artifactId>jedis</artifactId>
             <version>5.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+            <version>6.4.0.RELEASE</version>
+        </dependency>
 
 
         <!-- test -->
