--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,16 @@ target
 *.txt
 
 .vault.properties
-.gradle
+
 build
+.gradle
+**/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
