accesspolicy tiltak-refusjon-sakbehandler
Glemte å legge til appen i dev!

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -133,6 +133,9 @@ spec:
         - application: tiltaksgjennomforing-intern
           namespace: arbeidsgiver
           cluster: dev-gcp
+        - application: tiltak-refusjon-saksbehandler
+          namespace: arbeidsgiver
+          cluster: dev-gcp
   secureLogs:
     enabled: true
   envFrom:
