--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -6,9 +6,12 @@ metadata:
   namespace: personoversikt
   labels:
     team: personoversikt
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
 spec:
   image: "{{ image }}"
-  port: 8080
+  port: 4000
   liveness:
     path: internal/isAlive
     initialDelay: 50
@@ -17,7 +20,7 @@ spec:
     failureThreshold: 10
   prometheus:
     enabled: true
-    path: internal/prometheus
+    path: internal/metrics
   observability:
     autoInstrumentation:
       enabled: true
@@ -25,6 +28,7 @@ spec:
   readiness:
     path: internal/isReady
     initialDelay: 50
+    periodSeconds: 10
     timeout: 1
   resources:
     limits:
