Implementere redis cache
En ny redis instans brukes som shared cache. Cache interfacen er nå
implementert av en delegatør til Caffeine og redis.

--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -49,6 +49,8 @@ spec:
   redis:
     - instance: contextholder
       access: readwrite
+    - instance: contextholder_cache
+      access: readwrite
   azure:
     application:
       enabled: true
