--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -53,7 +53,7 @@ spec:
   redis:
     - instance: contextholder
       access: readwrite
-    - instance: contextholder_cache
+    - instance: contextholder-cache
       access: readwrite
   azure:
     application:
