--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,28 @@
 version: 2
 updates:
-  - package-ecosystem: maven
+  - package-ecosystem: gradle
     directory: /
     schedule:
       interval: daily
       time: "05:00"
-      timezone: UTC
+      timezone: Europe/Oslo
     labels:
       - "Dependencies"
+
   - package-ecosystem:  github-actions
     directory: /
     schedule:
       interval: daily
       time: "05:00"
-      timezone: UTC
+      timezone: Europe/Oslo
+    labels:
+      - "Dependencies"
+
+  - package-ecosystem:  docker
+    directory: /
+    schedule:
+      interval: daily
+      time: "05:00"
+      timezone: Europe/Oslo
     labels:
       - "Dependencies"
