--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -74,6 +74,9 @@ spec:
         - application: veilarbpersonflate
           namespace: poao
           cluster: dev-gcp
+        - application: inngar
+          namespace: dab
+          cluster: dev-gcp
         - application: veilarbportefoljeflatefs
           namespace: obo
           cluster: dev-gcp
