[KAIZEN-0] inbound rule for cv-veileder

--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -138,7 +138,7 @@ spec:
           cluster: prod-gcp
         - application: cv-veileder
           namespace: teampam
-          cluster: prog-gcp
+          cluster: prod-gcp
   secureLogs:
     enabled: true
   envFrom:
