Legg til rekrutteringsbistand-frontend i prod

--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -109,6 +109,8 @@ spec:
         - application: rekrutteringsbistand
           namespace: toi
           cluster: prod-gcp
+        - application: rekrutteringsbistand-frontend
+          namespace: toi
         - application: spinnsyn-frontend-interne
           namespace: flex
           cluster: prod-gcp
