--- a/.nais/dev.yaml
+++ b/.nais/dev.yaml
@@ -45,7 +45,7 @@ spec:
     scalingStrategy:
       cpu:
         thresholdPercentage: 50
-  redis:
+  valkey:
     - instance: contextholder
       access: readwrite
   azure:
