Legg til Inngar i inbound prod

--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -141,6 +141,8 @@ spec:
         - application: cv-veileder
           namespace: teampam
           cluster: prod-gcp
+        - application: inngar
+          namespace: dab
   secureLogs:
     enabled: true
   envFrom:
